sidebar, event page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,3 +70,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.category::-webkit-scrollbar {
+  display: none;
+}
