--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+body{
+  position: relative;
+  width: 100%;
+  overflow-x: hidden !important;
+}
 a {
   color: inherit;
   text-decoration: none;
